# BlindConsistency

./: CMakeLists.txt  OptFlowDeepFlow.h  OptFlowPatchMatch.h  README.md  regularization.cpp  regularization.h
CImg/: README.txt
patchmatch/: knn.cpp  nn.h
